03-grafana.yaml
# This is not a recommended configuration, and further support should be available
# from the Prometheus and Grafana communities.

---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: grafana-data
  labels:
      app: grafana
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
  storageClassName: ocs-storagecluster-ceph-rbd

---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: grafana-logs
  labels:
      app: grafana
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
  storageClassName: ocs-storagecluster-ceph-rbd
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: grafana
    spec:
      containers:
      - name: grafana
        image: strimzilab/grafana-openshift:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: grafana
          containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: grafana-data
          mountPath: /var/lib/grafana
        - name: grafana-logs
          mountPath: /var/log/grafana
      volumes:
      - name: grafana-data
        persistentVolumeClaim:
          claimName: grafana-data
      - name: grafana-logs
        persistentVolumeClaim:
          claimName: grafana-logs
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
  - name: grafana
    port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    name: grafana
  type: ClusterIP
---
apiVersion: v1
kind: Route
metadata:
  name: grafana-route
spec:
  to:
    kind: Service
    name: grafana
